--- a/templates/reservation/edit.html.twig
+++ b/templates/reservation/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Reservation{% endblock %}
+{% block title %}Modification Reservation{% endblock %}
 
 {% block body %}
-    <h1>Modifcation d'une réservation</h1>
+    <h1>Modification d'une réservation</h1>
 
-    {{ include('reservation/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('reservation/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-    <a href="{{ path('app_reservation_index') }}">back to list</a>
+    <a href="{{ path('app_reservation_index') }}">Retour à la liste</a>
 
     {{ include('reservation/_delete_form.html.twig') }}
 {% endblock %}
