--- a/templates/reservation/new.html.twig
+++ b/templates/reservation/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Reservation{% endblock %}
+{% block title %}Nouvelle réservation{% endblock %}
 
 {% block body %}
     <h1>Ajout d'une nouvelle réservation</h1>
 
     {{ include('reservation/_form.html.twig') }}
 
-    <a href="{{ path('app_reservation_index') }}">back to list</a>
+    <a href="{{ path('app_reservation_index') }}"> Retour à la liste</a>
 {% endblock %}
