--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
         {% endblock %}
     </head>
     <body>
+        {{ include('reservation/_nav.html.twig') }}
         {% block body %}{% endblock %}
     </body>
 </html>
